--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@ a {
 body {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
-  background-color: #f2f2f2;
+  background-color: rgba(236, 241, 248, 0.4);
   color: #3e4056;
 }
 
@@ -111,24 +111,33 @@ body {
 }
 
 .header__menu-link {
+  position: relative;
   display: block;
   padding: 10px 0 23px;
   color: rgba(62, 64, 86, 0.6);
+  -webkit-transition: color 280ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 280ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header__menu-link--current {
-  position: relative;
-  color: #3e4056;
-}
-
-.header__menu-link--current::after {
+.header__menu-link::after {
   position: absolute;
   bottom: 0;
   left: 0;
   content: '';
+  opacity: 0;
   background: linear-gradient(135deg, #ff974f 0%, #e32c75 100%);
   width: 100%;
   height: 4px;
+  -webkit-transition: opacity 280ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 280ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header__menu-link--current, .header__menu-link:hover {
+  color: #3e4056;
+}
+
+.header__menu-link--current::after, .header__menu-link:hover::after {
+  opacity: 1;
 }
 
 .header__user-profile {
@@ -268,8 +277,8 @@ body {
 
 .feed .user-card__avatar {
   float: left;
-  max-width: 132px;
-  max-height: 132px;
+  max-width: 120px;
+  max-height: 120px;
   width: 25vw;
   height: 25vw;
   border-radius: 50%;
@@ -401,6 +410,10 @@ body {
   position: relative;
   display: inline-block;
   font-weight: 600;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 .feed .library__checkbox-slider {
