--- a/sass/layout/_feed.scss
+++ b/sass/layout/_feed.scss
@@ -30,8 +30,8 @@
 
     &__avatar {
       float: left;
-      max-width: 132px;
-      max-height: 132px;
+      max-width: 120px;
+      max-height: 120px;
       @include size(25vw);
       border-radius: 50%;
       margin: 0 24px 32px 0;
@@ -145,6 +145,7 @@
       position: relative;
       display: inline-block;
       font-weight: 600;
+      user-select: none;
     }
 
     &__checkbox-slider {
