--- a/sass/layout/_feed.scss
+++ b/sass/layout/_feed.scss
@@ -252,7 +252,8 @@
       text-overflow: ellipsis;
       overflow: hidden;
 
-      padding: 5px;
+      padding: 4px;
+      margin: -3px 0;
       border-radius: 6px;
 
       color: $primary-text-color;
